<resources>
    <string name="app_name">PayCtions</string>
    <string name="login_user">USUÁRIO</string>
    <string name="login_password">SENHA</string>
    <string name="login_btnLogin">Efetuar login</string>
    <string name="login_inCaseYouDontHaveAAccount">Se não possuir um login de acesso\n contate um responsável.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_welcome">Bem-vindo,</string>
    <string name="home_user_name">Username</string>
    <string name="home_home">Home</string>
    <string name="home_solicitacoes">Estado de solicitações</string>
    <string name="home_historico_pagamento">Histórico de\n pagamento</string>
    <string name="home_user_role">Cargo: %s</string>
    <string name="home_user_since">Desde: %s</string>
    <string name="home_btn_incluir_func">Incluir\n colaborador</string>
    <string name="home_btn_buscar_alterar_func">Buscar/Alterar \nfuncionário</string>
    <string name="home_btn_holerite">Holerite</string>
    <string name="home_btn_ponto">Ponto eletrônico</string>
    <string name="home_btn_justificar">Justificar faltas/requisitar férias</string>
    <string name="home_user_id">ID: %d</string>
    <string name="fragment_estado_solicitacoes">ESTADO DE SOLICITAÇÕES</string>
    <string name="solicitacoes_list_item_data">Data:</string>
    <string name="solicitacoes_list_item_nome">Nome:</string>
    <string name="solicitacoes_list_item_responsavel">Responsável:</string>
    <string name="solicitacoes_list_item_registro">Registro:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="justifique_faltas">Justifique o motivo das suas faltas</string>
    <string name="anexar_documento_comprovar_falta">Anexar documento para\n comprovação da justificativa da falta</string>
    <string name="confirmar_falta"><u>Confirmar</u></string>
    <string name="hint_cadastro_colaborador_nome">Digite o nome do colaborador</string>
</resources>