<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeRhEMasterHomeBotoesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_15dp_whitetransparent_border_orange"
            android:text="@string/home_btn_incluir_func"
            android:gravity="center"
            android:textSize="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:textSize="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/round_15dp_whitetransparent_border_orange"
            android:text="@string/home_btn_holerite"
            android:gravity="center"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            android:background="@drawable/round_15dp_whitetransparent_border_orange"
            android:gravity="center"
            android:text="@string/home_btn_justificar"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="15dp"
            android:background="@drawable/round_15dp_whitetransparent_border_orange"
            android:text="@string/home_btn_buscar_alterar_func"
            android:textColor="@color/orange"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            android:background="@drawable/round_15dp_whitetransparent_border_orange"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/home_btn_ponto"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>