<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:padding="24dp"
    tools:context=".fragment.UsuarioInfoFragment"
    android:background="@drawable/background_cactus_top">

    <LinearLayout
        android:id="@+id/usuarioInfo_llUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="250dp"
                app:cardElevation="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtCargo_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/home_user_role" />

            <TextView
                android:id="@+id/txtDesde_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/home_user_since" />

            <TextView
                android:id="@+id/txtCdFuncionario_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/home_user_id" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>