<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeRhMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_llHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/home_home_inativo_30x30"
                android:text="@string/home_home"
                android:textColor="@color/gray_inativo"
                android:padding="10dp"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_llEstadoSolicitacoes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_txtEstadoSolicitacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:drawableTop="@drawable/home_graphics_inativo_30x33"
                android:text="@string/home_solicitacoes"
                android:textColor="@color/gray_inativo"
                android:padding="10dp"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_llHistoricoPagamentos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_txtHistoricoPagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:text="@string/home_historico_pagamento"
                android:drawableTop="@drawable/home_money_inativo_32x32"
                android:textSize="15dp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>