<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_weight="7"
        android:background="@drawable/round_5dp_solicitacoes_box"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/solicitacoes_list_item_data"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/solicitacoes_list_item_nome"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/solicitacoes_list_item_responsavel"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/solicitacoes_list_item_registro"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/solicitacaoItem_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="xx/xx/xxxx"
                android:textAlignment="textEnd"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solicitacaoItem_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="Miguel Alota Teles"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solicitacaoItem_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="Fulano de Tal"
                android:textAlignment="textEnd"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solicitacaoItem_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="ID - XPT123"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|right">

        <TextView
            android:id="@+id/solicitacaoItem_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/solicitacoes_item_confirmar_btn_34x34" />

        <TextView
            android:id="@+id/solicitacaoItem_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/solicitacoes_item_cancelar_btn_34x34" />

    </LinearLayout>

</LinearLayout>